# MCPServers

TemplateMCPServer/: MCPServerList.txt  README.md  pyproject.toml  requirements.txt  template_mcp_config.json
TemplateMCPServer/.roo/: mcp.json
TemplateMCPServer/src/template_mcp_server/: logging.py  main.py  main1.py  mcp_logging.py  mcp_server.py  mcp_subserver.py  mcp_subserver0.py  mcp_subserver1.py  mcp_tools.py  template_main.py
