[project]
name = "templatemcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncclick==8.3.0.7",
    "fastmcp==3.2.3",
    "gitpython==3.1.46",
]

[tool.poetry]
packages = [
    { include = "template_mcp_server", from = "src" }
]

[tool.hatch.metadata]
allow-direct-references=true

[project.scripts]
template-mcp-server = "template_mcp_server.main:main"